--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,6 +98,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Clean Nx cache
+        run: pnpm nx reset
+
       - name: Generate Prisma Client
         run: cd apps/backend && pnpm prisma generate
         env:
