--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,37 @@ env:
   PNPM_VERSION: 'latest'
 
 jobs:
+  # Detect which parts of the codebase changed
+  detect-changes:
+    name: Detect Changes
+    runs-on: ubuntu-latest
+    outputs:
+      frontend: ${{ steps.filter.outputs.frontend }}
+      backend: ${{ steps.filter.outputs.backend }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check for file changes
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            frontend:
+              - 'apps/frontend/**'
+              - 'package.json'
+              - 'pnpm-lock.yaml'
+              - '.github/workflows/deploy.yml'
+            backend:
+              - 'apps/backend/**'
+              - 'package.json'
+              - 'pnpm-lock.yaml'
+              - '.github/workflows/deploy.yml'
+
   # Deploy Frontend to Vercel
   deploy-frontend:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
     name: Deploy Frontend to Vercel
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -80,6 +109,8 @@ jobs:
 
   # Deploy Backend - Choose your platform
   deploy-backend:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.backend == 'true' || github.event_name == 'workflow_dispatch'
     name: Deploy Backend
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -173,7 +204,7 @@ jobs:
   deployment-complete:
     name: Deployment Complete
     runs-on: ubuntu-latest
-    needs: [deploy-frontend, deploy-backend]
+    needs: [detect-changes, deploy-frontend, deploy-backend]
     if: always()
 
     steps:
@@ -183,11 +214,25 @@ jobs:
           echo "📦 DEPLOYMENT SUMMARY"
           echo "========================================="
           echo ""
-          echo "Frontend: ${{ needs.deploy-frontend.result }}"
-          echo "Backend:  ${{ needs.deploy-backend.result }}"
+          echo "Changes Detected:"
+          echo "  Frontend: ${{ needs.detect-changes.outputs.frontend }}"
+          echo "  Backend:  ${{ needs.detect-changes.outputs.backend }}"
           echo ""
-          if [[ "${{ needs.deploy-frontend.result }}" == "success" && "${{ needs.deploy-backend.result }}" == "success" ]]; then
-            echo "✅ All deployments completed successfully!"
+          echo "Deployment Results:"
+          echo "  Frontend: ${{ needs.deploy-frontend.result }}"
+          echo "  Backend:  ${{ needs.deploy-backend.result }}"
+          echo ""
+
+          # Check if any job failed
+          if [[ "${{ needs.deploy-frontend.result }}" == "failure" || "${{ needs.deploy-backend.result }}" == "failure" ]]; then
+            echo "❌ Some deployments failed!"
+            exit 1
+          fi
+
+          # Success if deployed jobs succeeded (skipped jobs are OK)
+          if [[ ("${{ needs.deploy-frontend.result }}" == "success" || "${{ needs.deploy-frontend.result }}" == "skipped") && \
+                ("${{ needs.deploy-backend.result }}" == "success" || "${{ needs.deploy-backend.result }}" == "skipped") ]]; then
+            echo "✅ All required deployments completed successfully!"
           else
             echo "⚠️  Some deployments failed. Check logs above."
           fi
