fix(docker): copy all TypeScript and webpack config files for build
Added missing configuration files to Docker build:
- tsconfig.base.json, tsconfig.json (root)
- tsconfig*.json (backend - all TypeScript configs)
- webpack.config.js (backend build configuration)

This fixes: Module not found: Error: Can't resolve 'zod'

Without these config files, webpack couldn't properly resolve module
dependencies during the build process.

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -10,10 +10,12 @@ WORKDIR /app
 
 # Copy workspace configuration files
 COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml ./
-COPY nx.json ./
+COPY nx.json tsconfig.base.json tsconfig.json ./
 
-# Copy backend package.json
+# Copy backend configuration files
 COPY apps/backend/package.json ./apps/backend/
+COPY apps/backend/tsconfig*.json ./apps/backend/
+COPY apps/backend/webpack.config.js ./apps/backend/
 
 # Install dependencies (pnpm workspace installs all in root node_modules)
 RUN pnpm install --frozen-lockfile
