fix(ci): add --skip-nx-cache flag to prevent cache write errors
Added --skip-nx-cache to backend build to fix:
Error: File exists (os error 17)

The build succeeds but Nx fails when trying to write cache.
Skipping cache in production builds is acceptable since:
- Production builds are one-time operations
- Cache is primarily useful for development
- Avoids race condition and permission issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,7 +144,7 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Build Backend
-        run: pnpm nx build backend --prod
+        run: pnpm nx build backend --prod --skip-nx-cache
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
