fix(ci): add NX_SKIP_NX_CACHE environment variable for frontend build
Set NX_SKIP_NX_CACHE=true for Vercel build to prevent cache errors.

This prevents the 'File exists (os error 17)' error during frontend
builds in CI/CD pipeline.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,6 +85,7 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           NEXT_PUBLIC_API_URL: ${{ secrets.PRODUCTION_API_URL }}
+          NX_SKIP_NX_CACHE: true
 
       - name: Deploy to Vercel
         id: vercel-deploy
