feat: add production build scripts with cache skipping
Added convenient npm scripts for production builds:
- build:prod - Build all projects for production
- build:frontend:prod - Build frontend with --skip-nx-cache
- build:backend:prod - Build backend with --skip-nx-cache

These scripts prevent 'File exists (os error 17)' cache errors
during production builds.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "nx run-many -t build --all",
     "build:frontend": "nx build frontend",
     "build:backend": "nx build backend",
+    "build:prod": "nx run-many -t build --all --skip-nx-cache",
+    "build:frontend:prod": "nx build frontend --configuration=production --skip-nx-cache",
+    "build:backend:prod": "nx build backend --prod --skip-nx-cache",
     "lint": "nx run-many -t lint --all",
     "lint:fix": "nx run-many -t lint --all --fix",
     "test": "nx run-many -t test --all",
