fix(vercel): run Vercel commands from apps/frontend directory
Fixed deployment error: routes-manifest.json couldn't be found

Changes:
- Added working-directory: apps/frontend to all Vercel CLI commands
- This ensures Vercel uses the vercel.json config in the frontend directory
- Updated vercel.json buildCommand to include --skip-nx-cache flag

Vercel needs to run from the app directory to:
- Find the vercel.json configuration
- Understand the monorepo structure
- Output build artifacts to the correct location

--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd ../.. && pnpm nx build frontend --configuration=production",
+  "buildCommand": "cd ../.. && pnpm nx build frontend --configuration=production --skip-nx-cache",
   "outputDirectory": "../../dist/apps/frontend",
   "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
   "framework": "nextjs",
