--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,12 +74,14 @@ jobs:
         run: pnpm install -g vercel@latest
 
       - name: Pull Vercel Environment Information
+        working-directory: apps/frontend
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
       - name: Build Project Artifacts
+        working-directory: apps/frontend
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -89,6 +91,7 @@ jobs:
 
       - name: Deploy to Vercel
         id: vercel-deploy
+        working-directory: apps/frontend
         run: |
           url=$(vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }})
           echo "url=$url" >> $GITHUB_OUTPUT
