fix(docker): copy .npmrc and enable build scripts for dependencies
Added .npmrc configuration file and enabled build scripts during install.

Fixes: Module not found errors for zod, cors, helmet, etc.

Without .npmrc and with ignored build scripts, essential packages like
@swc/core couldn't build native bindings, causing webpack module
resolution to fail.

Changes:
- Copy .npmrc to Docker container
- Use --ignore-scripts=false to allow essential build scripts
- This enables @swc/core, esbuild, and other native modules to build

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -9,7 +9,7 @@ RUN corepack enable && corepack prepare pnpm@latest --activate
 WORKDIR /app
 
 # Copy workspace configuration files
-COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml ./
+COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml .npmrc ./
 COPY nx.json tsconfig.base.json tsconfig.json ./
 
 # Copy backend configuration files
@@ -18,7 +18,8 @@ COPY apps/backend/tsconfig*.json ./apps/backend/
 COPY apps/backend/webpack.config.js ./apps/backend/
 
 # Install dependencies (pnpm workspace installs all in root node_modules)
-RUN pnpm install --frozen-lockfile
+# Use --ignore-scripts=false to allow essential build scripts like @swc/core
+RUN pnpm install --frozen-lockfile --ignore-scripts=false
 
 # Stage 2: Build application
 FROM node:20-alpine AS builder
