fix(docker): copy all workspace package.json files for pnpm resolution
Added frontend and backend-e2e package.json files to deps stage.

Fixes: Module not found errors for zod, cors, helmet, etc.

Root Cause:
pnpm workspace requires ALL app package.json files to properly:
- Resolve workspace protocol dependencies
- Set up correct symlinks between packages
- Hoist shared dependencies to root node_modules

Without complete workspace structure, pnpm couldn't properly install
dependencies, causing webpack to fail module resolution during build.

Solution:
Copy all 3 app package.json files:
- apps/backend/package.json
- apps/frontend/package.json (ADDED)
- apps/backend-e2e/package.json (ADDED)

This gives pnpm the complete workspace context needed for proper
dependency installation and module resolution.

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -12,8 +12,12 @@ WORKDIR /app
 COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml .npmrc ./
 COPY nx.json tsconfig.base.json tsconfig.json ./
 
-# Copy backend configuration files
+# Copy ALL app package.json files for proper workspace resolution
 COPY apps/backend/package.json ./apps/backend/
+COPY apps/frontend/package.json ./apps/frontend/
+COPY apps/backend-e2e/package.json ./apps/backend-e2e/
+
+# Copy backend configuration files
 COPY apps/backend/tsconfig*.json ./apps/backend/
 COPY apps/backend/webpack.config.js ./apps/backend/
 
