--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -9,6 +9,10 @@ JWT_EXPIRES_IN="7d"
 PORT=3333
 NODE_ENV="development"
 
+# CORS Configuration
+# Comma-separated list of allowed origins (no trailing slashes)
+CORS_ORIGIN="http://localhost:3000,http://localhost:4200"
+
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
