--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "@types/node": "20.19.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "~15.2.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "nx": "22.0.1",
