--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,66 +89,49 @@ jobs:
         env:
           NX_SKIP_NX_CACHE: true
 
-  # Job 3: Run tests (commented out - test target not configured yet)
-  # test:
-  #   name: Run Tests
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 15
-  #
-  #   services:
-  #     postgres:
-  #       image: postgres:16-alpine
-  #       env:
-  #         POSTGRES_USER: postgres
-  #         POSTGRES_PASSWORD: postgres
-  #         POSTGRES_DB: meeting_manager_test
-  #       ports:
-  #         - 5432:5432
-  #       options: >-
-  #         --health-cmd pg_isready
-  #         --health-interval 10s
-  #         --health-timeout 5s
-  #         --health-retries 5
-  #
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #
-  #     - name: Setup pnpm
-  #       uses: pnpm/action-setup@v4
-  #       with:
-  #         version: ${{ env.PNPM_VERSION }}
-  #
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: ${{ env.NODE_VERSION }}
-  #         cache: 'pnpm'
-  #
-  #     - name: Install dependencies
-  #       run: pnpm install --frozen-lockfile
-  #
-  #     - name: Generate Prisma Client
-  #       run: cd apps/backend && pnpm prisma generate
-  #
-  #     - name: Run database migrations
-  #       env:
-  #         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/meeting_manager_test?schema=public
-  #       run: cd apps/backend && pnpm prisma migrate deploy
-  #
-  #     - name: Run backend tests
-  #       env:
-  #         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/meeting_manager_test?schema=public
-  #         JWT_SECRET: test-secret-key-for-ci-pipeline
-  #       run: pnpm nx test backend --coverage
-  #
-  #     - name: Upload coverage reports
-  #       uses: codecov/codecov-action@v4
-  #       if: always()
-  #       with:
-  #         files: ./coverage/apps/backend/lcov.info
-  #         flags: backend
-  #         fail_ci_if_error: false
+  # Job 3: Run unit tests
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Generate Prisma Client
+        run: cd apps/backend && pnpm prisma generate
+        env:
+          DATABASE_URL: postgresql://test:test@localhost:5432/test_db
+
+      - name: Run backend tests with coverage
+        run: cd apps/backend && npx jest --coverage --ci
+        env:
+          NODE_ENV: test
+          JWT_SECRET: test-jwt-secret-key-for-ci-pipeline
+
+      - name: Upload coverage reports
+        uses: codecov/codecov-action@v4
+        if: always()
+        with:
+          files: ./apps/backend/coverage/lcov.info
+          flags: backend
+          fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   # Job 4: Build applications
   build:
@@ -204,7 +187,7 @@ jobs:
     name: Build Docker Images
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    needs: [lint, typecheck, build]
+    needs: [lint, typecheck, test, build]
     strategy:
       matrix:
         app: [frontend, backend]
@@ -260,7 +243,7 @@ jobs:
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [lint, typecheck, build, docker-build]
+    needs: [lint, typecheck, test, build, docker-build]
     if: always()
 
     steps:
@@ -268,6 +251,7 @@ jobs:
         run: |
           if [[ "${{ needs.lint.result }}" != "success" ]] || \
              [[ "${{ needs.typecheck.result }}" != "success" ]] || \
+             [[ "${{ needs.test.result }}" != "success" ]] || \
              [[ "${{ needs.build.result }}" != "success" ]] || \
              [[ "${{ needs.docker-build.result }}" != "success" ]]; then
             echo "One or more CI jobs failed"
