--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "~15.2.4",
     "husky": "^9.1.7",
+    "jest": "^30.2.0",
     "lint-staged": "^16.2.6",
     "nx": "22.0.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "ts-jest": "^29.4.5",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "webpack-cli": "^5.1.4"
