--- a/apps/backend/tsconfig.spec.json
+++ b/apps/backend/tsconfig.spec.json
@@ -14,11 +14,5 @@
     "types": ["jest", "node"],
     "outDir": "../../dist/out-tsc"
   },
-  "include": [
-    "jest.config.ts",
-    "src/**/*.ts",
-    "src/**/*.test.ts",
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
 }
